# speak-buddy

./: README.md  app.py  pyproject.toml  run.py
app/: __init__.py  handler.py
app/static/: app.js  styles.css
app/templates/: index.html
